--- a/sponsor.html
+++ b/sponsor.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prodotti</title>
+    <title>Sponsorizzazione</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <header class="d-block d-sm-block d-md-none">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary"data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Bootstrap Dashboard</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Dashboard</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="sponsor.html">Sponsorizzazione</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="prodotti.html" >Prodotti</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="nuovo-prodotto.html">Nuovo prodotto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Clienti</a>
+                  </li>
+                </ul>
+                <ul class="navbar-nav mt-5">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">Impostazioni</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Profilo</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Esci</a>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
