--- a/nuovo-prodotto.html
+++ b/nuovo-prodotto.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+
+    <!-- HEADER CON NAVBAR -->
     <header class="d-block d-sm-block d-md-none">
         <nav class="navbar navbar-expand-lg bg-body-tertiary"data-bs-theme="dark">
             <div class="container-fluid">
@@ -47,8 +49,12 @@
             </div>
           </nav>
     </header>
-    <main>
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" style="width: 20%; height: 100vh;">
+
+<!-- MAIN -->
+    <main class="d-flex">
+
+        <!-- SLIDEBAR -->
+        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" style="width: 300px; height: 200vh;">
             <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
               <span class="fs-4">Bootstrap Dashboard</span>
             </a>
@@ -98,7 +104,96 @@
                 <li><a class="dropdown-item" href="#">Esci</a></li>
               </ul>
             </div>
-          </div>
+        </div>
+
+        <!-- NUOVO PRODOTTO -->
+        <div class="container mt-4">
+            <div class="row d-flex justify-content-center mb-4">
+                <div class="col-9 col-md-8 col-lg-12">
+                    <h2 class="fw-semibold text-center mb-4">
+                        Crea nuovo prodotto
+                    </h2>
+                    <p class="text-center">
+                        I campi contrassegnati con un asterisco (*) sono obbligatori. <br> Le immagini devono essere in formato PNG e non devono superare i 4 MB di dimensione.
+                    </p>
+                </div>
+            </div>
+
+            <!-- FORM -->
+            <div class="form mb-5 d-lg-flex flex-wrap grid gap-1">
+                <div class="col-11 mx-auto col-lg-5 mx-le-0">
+                    <div class="mb-3 d-md-flex align-items-center">
+                        <label for="exampleInputname" class="form-label me-5 pe-5">Nome</label>
+                        <input type="name" class="form-control" id="exampleInputname" aria-describedby="name" placeholder="Samsung Galaxy 10 Plus">
+                    </div>
+                    <div class="mb-3 d-md-flex align-items-center">
+                        <label for="exampleInputname" class="form-label me-5 pe-5">Prezzo</label>
+                        <input type="name" class="form-control" id="exampleInputname" aria-describedby="name" placeholder="99.00">
+                    </div>
+                    <div class="mb-3 d-md-flex align-items-center">
+                        <label class="form-label me-5 pe-5">Marca</label>
+                        <select class="form-select form-select-md mb-3" aria-label="medium select example">
+                            <option selected>--- Seleziona ---</option>
+                            <option value="1">Samsung</option>
+                            <option value="2">Sony</option>
+                            <option value="3">Xiaomi</option>
+                          </select>
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control" placeholder="Inserisci la descrizione del prodotto, massimo 1000 caratteri" id="floatingTextarea2" style="height: 150px"></textarea>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                        <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Immagine</button>
+                    </div>
+                    <div class="btn-group mb-3" role="group" aria-label="Basic radio toggle button group">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                        <label class="btn btn-outline-secondary" for="btnradio1">Disponibile</label>
+                      
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btnradio2">Esaurito</label>
+                      
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btnradio3">Fuori produzione</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btnradio4">In arrivo</label>
+                      </div>
+                </div>
+                <div class="col-11 mx-auto col-lg-5 ms-lg-0 mb-3">
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex">
+                          <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                          <label class="form-check-label" for="firstCheckbox">Fotocamera principale <p class="text-secondary text-small">foto di alta qualità eregistrare video nitidi</p></label>
+                        </li>
+                        <li class="list-group-item">
+                          <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                          <label class="form-check-label" for="secondCheckbox">Schermo OLED<p class="text-secondary text-small">offre colori vividi per un'esperienza visiva straordinaria.</p></label>
+                        </li>
+                        <li class="list-group-item d-flex">
+                          <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                          <label class="form-check-label" for="thirdCheckbox">processore Octa-core<p class="text-secondary text-small">prestazioni fluide e elociu per eseguire le applicazioni più esigenti</p></label>
+                        </li>
+                        <li class="list-group-item d-flex">
+                            <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                            <label class="form-check-label" for="firstCheckbox">ricarica wireless<p class="text-secondary text-small">consente di ricaricare lo smartphone comodamente senza l'uso di cavi</p></label>
+                          </li>
+                          <li class="list-group-item d-flex">
+                            <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                            <label class="form-check-label" for="secondCheckbox">conessione 5G<p class="text-secondary text-small">navigazione ultra veloce e streaming senza interruzioni</p></label>
+                          </li>
+                          <li class="list-group-item d-flex">
+                            <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                            <label class="form-check-label" for="thirdCheckbox">tecnologia NFC<p class="text-secondary text-small">per effettuare pagamenti senza contatto</p></label>
+                          </li>
+                      </ul>
+                </div>
+                <div class="col-11 mx-auto col-lg-11 ps-3">
+                    <button type="submit" class="btn btn-primary">Salva</button>
+
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
