--- a/prodotti.html
+++ b/prodotti.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+
+    <!-- HEADER CON NAVBAR -->
     <header class="d-block d-sm-block d-md-none">
         <nav class="navbar navbar-expand-lg bg-body-tertiary"data-bs-theme="dark">
             <div class="container-fluid">
@@ -47,8 +49,12 @@
             </div>
           </nav>
     </header>
+
+<!-- MAIN -->
     <main>
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" style="width: 20%; height: 100vh;">
+
+        <!-- SLIDEBAR -->
+        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" style="width: 300px; height: 200vh;">
             <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
               <span class="fs-4">Bootstrap Dashboard</span>
             </a>
@@ -98,7 +104,9 @@
                 <li><a class="dropdown-item" href="#">Esci</a></li>
               </ul>
             </div>
-          </div>
+        </div>
+
+
     </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
