--- a/sponsor.html
+++ b/sponsor.html
@@ -1,113 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sponsorizzazione</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sponsorizzazione</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
+
 <body>
 
-    <!-- HEADER CON NAVBAR -->
-    <header class="d-block d-sm-block d-md-none">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary"data-bs-theme="dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Bootstrap Dashboard</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Dashboard</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="sponsor.html">Sponsorizzazione</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="prodotti.html" >Prodotti</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="nuovo-prodotto.html">Nuovo prodotto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Clienti</a>
-                  </li>
-                </ul>
-                <ul class="navbar-nav mt-5">
-                    <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#">Impostazioni</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Profilo</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Esci</a>
-                    </li>
-                  </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-
-<!-- MAIN -->
-    <main>
-
-        <!-- SLIDEBAR -->
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" style="width: 300px; height: 200vh;">
-            <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-              <span class="fs-4">Bootstrap Dashboard</span>
-            </a>
-            <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
-              <li class="nav-item">
-                <a href="#" class="nav-link link-body-emphasis align-items-center d-flex" aria-current="page">
-                  <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
-                  Dashboard
-                </a>
-              </li>
-              <li>
-                <a href="sponsor.html" class="nav-link link-body-emphasis align-items-center d-flex active">
-                  <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zm406.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 210.7l-57.4-57.4c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L240 221.3l57.4 57.4c12.5 12.5 32.8 12.5 45.3 0l128-128z"/></svg>
-                  Sponsorizzazione
-                </a>
-              </li>
-              <li>
-                <a href="prodotti.html" class="nav-link link-body-emphasis align-items-center d-flex">
-                  <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M50.7 58.5L0 160H208V32H93.7C75.5 32 58.9 42.3 50.7 58.5zM240 160H448L397.3 58.5C389.1 42.3 372.5 32 354.3 32H240V160zm208 32H0V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192z"/></svg>
-                  Prodotti
-                </a>
-              </li>
-              <li>
-                <a href="nuovo-prodotto.html" class="nav-link link-body-emphasis align-items-center d-flex">
-                  <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/>></svg>
-                  Nuovo Prodotto
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link link-body-emphasis align-items-center d-flex">
-                  <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z"/></svg>
-                  Clienti
-                </a>
-              </li>
-            </ul>
-            <hr>
-            <div class="dropdown">
-              <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                <strong>Mario Rossi</strong>
-              </a>
-              <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="#">Impostazioni</a></li>
-                <li><a class="dropdown-item" href="#">Profilo</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Esci</a></li>
-              </ul>
-            </div>
+  <!-- HEADER CON NAVBAR -->
+  <header class="d-block d-sm-block d-md-none sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Bootstrap Dashboard</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="sponsor.html">Sponsorizzazione</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="prodotti.html">Prodotti</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nuovo-prodotto.html">Nuovo prodotto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Clienti</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mt-5">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Impostazioni</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Profilo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Esci</a>
+            </li>
+          </ul>
         </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- MAIN -->
+  <main>
+
+    <!-- SLIDEBAR -->
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark"
+      style="width: 300px; height: 200vh;">
+      <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <span class="fs-4">Bootstrap Dashboard</span>
+      </a>
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="#" class="nav-link link-body-emphasis align-items-center d-flex" aria-current="page">
+            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 576 512">
+              <path
+                d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
+            </svg>
+            Dashboard
+          </a>
+        </li>
+        <li>
+          <a href="sponsor.html" class="nav-link link-body-emphasis align-items-center d-flex active">
+            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512">
+              <path
+                d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zm406.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 210.7l-57.4-57.4c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L240 221.3l57.4 57.4c12.5 12.5 32.8 12.5 45.3 0l128-128z" />
+            </svg>
+            Sponsorizzazione
+          </a>
+        </li>
+        <li>
+          <a href="prodotti.html" class="nav-link link-body-emphasis align-items-center d-flex">
+            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512">
+              <path
+                d="M50.7 58.5L0 160H208V32H93.7C75.5 32 58.9 42.3 50.7 58.5zM240 160H448L397.3 58.5C389.1 42.3 372.5 32 354.3 32H240V160zm208 32H0V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192z" />
+            </svg>
+            Prodotti
+          </a>
+        </li>
+        <li>
+          <a href="nuovo-prodotto.html" class="nav-link link-body-emphasis align-items-center d-flex">
+            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512">
+              <path
+                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" />
+              >
+            </svg>
+            Nuovo Prodotto
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-body-emphasis align-items-center d-flex">
+            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512">
+              <path
+                d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z" />
+            </svg>
+            Clienti
+          </a>
+        </li>
+      </ul>
+      <hr>
+      <div class="dropdown">
+        <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+          <strong>Mario Rossi</strong>
+        </a>
+        <ul class="dropdown-menu text-small shadow">
+          <li><a class="dropdown-item" href="#">Impostazioni</a></li>
+          <li><a class="dropdown-item" href="#">Profilo</a></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li><a class="dropdown-item" href="#">Esci</a></li>
+        </ul>
+      </div>
+    </div>
 
 
-    </main>
+  </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
