--- a/prodotti.html
+++ b/prodotti.html
@@ -54,11 +54,10 @@
   </header>
 
   <!-- MAIN -->
-  <main>
+  <main class="d-flex overflow-y-hidden" style="height: 100vh;">
 
     <!-- SLIDEBAR -->
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark"
-      style="width: 300px; height: 200vh;">
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark">
       <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Bootstrap Dashboard</span>
       </a>
@@ -134,6 +133,8 @@
       </div>
     </div>
 
+
+    
 
   </main>
 </body>
