--- a/sponsor.html
+++ b/sponsor.html
@@ -57,8 +57,7 @@
   <main class="d-flex overflow-y-hidden" style="height: 100vh;">
 
     <!-- SLIDEBAR -->
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark"
-      style="width: 300px;">
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark">
       <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Bootstrap Dashboard</span>
       </a>
@@ -140,7 +139,7 @@
       <!-- PRIMA SEZIONE -->
       <div class="container p-5">
         <div class="row d-flex justify-content-center mb-4">
-          <div class="col-9 col-md-8 col-lg-12 d-flex flex-column justify-content-center">
+          <div class="col-12 d-flex flex-column justify-content-center">
             <h2 class="fw-semibold text-center mb-3">
               Trova il piano pefetto per te!
             </h2>
@@ -164,67 +163,60 @@
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Free</h4>
+                <h4 class="my-0 fw-normal">Gratis</h4>
               </div>
               <div class="card-body">
-                <h1 class="card-title pricing-card-title">$0<small class="text-body-secondary fw-light">/mo</small></h1>
+                <h1 class="card-title pricing-card-title">€ 0<small class="text-body-secondary fw-light">/mese</small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>10 users included</li>
-                  <li>2 GB of storage</li>
-                  <li>Email support</li>
-                  <li>Help center access</li>
+                  <li>10 utenti</li>
+                  <li>2 GB di spazio</li>
+                  <li>Pubblicità</li>
+                  <li>Supporto email</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+                <button type="button" class="w-100 btn btn-lg btn-outline-primary">Prosegui</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm border-primary">
               <div class="card-header py-3 text-bg-primary border-primary">
-                <h4 class="my-0 fw-normal">Enterprise</h4>
+                <h4 class="my-0 fw-normal">Premium</h4>
               </div>
               <div class="card-body">
-                <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small>
+                <h1 class="card-title pricing-card-title">€ 15<small class="text-body-secondary fw-light">/mese</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>30 users included</li>
-                  <li>15 GB of storage</li>
-                  <li>Phone and email support</li>
-                  <li>Help center access</li>
+                  <li>50 utenti</li>
+                  <li>10 GB di spazio</li>
+                  <li>Senza pubblicità</li>
+                  <li>Supporto email prioritario</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+                <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Pro</h4>
+                <h4 class="my-0 fw-normal">Enterprise</h4>
               </div>
               <div class="card-body">
-                <h1 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-light">/mo</small>
+                <h1 class="card-title pricing-card-title">€ 29<small class="text-body-secondary fw-light">/mese</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>20 users included</li>
-                  <li>10 GB of storage</li>
-                  <li>Priority email support</li>
-                  <li>Help center access</li>
+                  <li>Utenti illimitati</li>
+                  <li>Spazio illimitato</li>
+                  <li>Senza pubblicità</li>
+                  <li>Supporto via email e chat</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+                <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
               </div>
             </div>
           </div>
         </div>
-
-
       </div>
-
-
     </div>
-
-
   </main>
-
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
