[UPD] test tabella

--- a/nuovo-prodotto.html
+++ b/nuovo-prodotto.html
@@ -61,7 +61,7 @@
       <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Bootstrap Dashboard</span>
       </a>
-      <hr>
+      <hr class="text-light">
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
           <a href="#" class="nav-link link-body-emphasis align-items-center d-flex" aria-current="page">
@@ -115,7 +115,7 @@
           </a>
         </li>
       </ul>
-      <hr>
+      <hr class="text-light">
       <div class="dropdown">
         <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
           data-bs-toggle="dropdown" aria-expanded="false">
