[FIX] colonna azioni di tabella

--- a/prodotti.html
+++ b/prodotti.html
@@ -147,15 +147,14 @@
         </div>
 
         <!-- TABELLA -->
-        <div class="col-12">
           <div class="table-responsive">
             <table class="table">
               <thead>
                 <tr>
                   <th scope="col-9">Nome</th>
-                  <th class="d-none d-sm-table-cell text-center" scope="col-1">Prezzo</th>
+                  <th style="min-width: 90px;" class="d-none d-sm-table-cell text-center" scope="col-1">Prezzo</th>
                   <th class="d-none d-md-table-cell text-center" scope="col-1">Stato</th>
-                  <th class=" text-center" scope="col-1">Azioni</th>
+                  <th style="min-width: 90px;" class="text-center" scope="col-1">Azioni</th>
                 </tr>
               </thead>
               <!-- CORPO DELLA TABELLA -->
@@ -492,7 +491,6 @@
               </div>
             </div>
           </div>
-        </div>
       </div>
 
   </main>
