[FIX] Doppia scrollbar verticale

--- a/prodotti.html
+++ b/prodotti.html
@@ -54,7 +54,7 @@
   </header>
 
   <!-- MAIN -->
-  <main class="d-flex overflow-y-hidden" style="height: 100vh;">
+  <main class="d-flex overflow-y-hidden">
 
     <!-- SLIDEBAR -->
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark">
@@ -134,7 +134,7 @@
     </div>
 
     <!-- CONTENUTO DI DESTRA -->
-    <div class="container-fluid overflow-y-auto ">
+    <div class="container-fluid overflow-y-auto vh-100">
       <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center mt-4 ps-3 border-bottom pb-2 mb-3 mx-auto">
           <h2 class="fw-semibold">
