--- a/sponsor.html
+++ b/sponsor.html
@@ -54,7 +54,7 @@
   </header>
 
   <!-- MAIN -->
-  <main class="d-flex overflow-y-hidden" style="height: 100vh;">
+  <main class="d-flex overflow-y-hidden">
 
     <!-- SLIDEBAR -->
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark">
@@ -134,7 +134,7 @@
     </div>
 
     <!-- CONTENUTO DI DESTRA -->
-    <div class="container-fluid overflow-y-auto">
+    <div class="container-fluid overflow-y-auto vh-100">
 
       <!-- PRIMA SEZIONE -->
       <div class="container p-5">
