--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,7 @@
   </header>
 
   <!-- MAIN -->
-  <main class="d-flex" style="height: 100vh;">
+  <main class="d-flex overflow-hidden" >
 
     <!-- SLIDEBAR -->
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" >
@@ -134,15 +134,17 @@
     </div>
 
 
-    <div class="container-fluid overflow-y-auto bg-black">
+    <div class="container-fluid overflow-y-auto vh-100 bg-black">
         <div class="row">
             <div class="col-12 text-center mt-5">
                 <img style="width: 50%;" src="https://avatars.githubusercontent.com/u/163033493?v=4" alt="">
             </div>
         </div>
     </div>
+    
 
   </main>
+ 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
