[FIX]  Varie piccole correzioni

--- a/nuovo-prodotto.html
+++ b/nuovo-prodotto.html
@@ -56,7 +56,7 @@
   <!-- MAIN -->
   <main class="d-flex overflow-hidden">
 
-    <!-- SLIDEBAR -->
+    <!-- SIDEBAR -->
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" >
       <a href="dashboard.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Bootstrap Dashboard</span>
@@ -199,33 +199,33 @@
             <div class="col-12 col-lg-5 mb-3">
               <ul class="list-group">
                 <li class="list-group-item d-flex py-1">
-                  <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="primoCheckbox">
                   <label class="form-check-label" for="firstCheckbox">Fotocamera principale <p
                       class="text-secondary text-small mb-0">foto di alta qualità eregistrare video nitidi</p></label>
                 </li>
                 <li class="list-group-item d-flex py-1">
-                  <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="secondoCheckbox">
                   <label class="form-check-label" for="secondCheckbox">Schermo OLED<p class="text-secondary text-small mb-0">
                       offre colori vividi per un'esperienza visiva straordinaria.</p></label>
                 </li>
                 <li class="list-group-item d-flex py-1">
-                  <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="terzoCheckbox">
                   <label class="form-check-label" for="thirdCheckbox">processore Octa-core<p
                       class="text-secondary text-small mb-0">prestazioni fluide e elociu per eseguire le applicazioni più
                       esigenti</p></label>
                 </li>
                 <li class="list-group-item d-flex py-1">
-                  <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="quartoCheckbox">
                   <label class="form-check-label" for="firstCheckbox">ricarica wireless<p class="text-secondary text-small mb-0">
                       consente di ricaricare lo smartphone comodamente senza l'uso di cavi</p></label>
                 </li>
                 <li class="list-group-item d-flex py-1">
-                  <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="quintoCheckbox">
                   <label class="form-check-label" for="secondCheckbox">conessione 5G<p class="text-secondary text-small mb-0">
                       navigazione ultra veloce e streaming senza interruzioni</p></label>
                 </li>
                 <li class="list-group-item d-flex py-1">
-                  <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="sestoCheckbox">
                   <label class="form-check-label" for="thirdCheckbox">tecnologia NFC<p class="text-secondary text-small mb-0">per
                       effettuare pagamenti senza contatto</p></label>
                 </li>
