--- a/prodotti.html
+++ b/prodotti.html
@@ -56,7 +56,7 @@
   <!-- MAIN -->
   <main class="d-flex overflow-y-hidden">
 
-    <!-- SLIDEBAR -->
+    <!-- SIDEBAR -->
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark">
       <a href="dashboard.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Bootstrap Dashboard</span>
