--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nuovo Prodotto</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://kit.fontawesome.com/7711c3f1fc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -65,52 +67,31 @@
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
           <a href="dashboard.html" class="nav-link link-body-emphasis align-items-center d-flex active" aria-current="page">
-            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 576 512">
-              <path
-                d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
-            </svg>
+            <i class="fas fa-home me-2 text-light" width="16" height="16"></i>
             Dashboard
           </a>
         </li>
         <li>
           <a href="sponsor.html" class="nav-link link-body-emphasis align-items-center d-flex">
-            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512">
-              <path
-                d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zm406.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 210.7l-57.4-57.4c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L240 221.3l57.4 57.4c12.5 12.5 32.8 12.5 45.3 0l128-128z" />
-            </svg>
+            <i class="fas fa-chart-line me-2 text-light" width="16" height="16"></i>
             Sponsorizzazione
           </a>
         </li>
         <li>
           <a href="prodotti.html" class="nav-link link-body-emphasis align-items-center d-flex">
-            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 448 512">
-              <path
-                d="M50.7 58.5L0 160H208V32H93.7C75.5 32 58.9 42.3 50.7 58.5zM240 160H448L397.3 58.5C389.1 42.3 372.5 32 354.3 32H240V160zm208 32H0V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192z" />
-            </svg>
+            <i class="fas fa-box me-2 text-light" width="16" height="16"></i>
             Prodotti
           </a>
         </li>
         <li>
           <a href="nuovo-prodotto.html" class="nav-link link-body-emphasis align-items-center d-flex">
-            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 448 512">
-              <path
-                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" />
-              >
-            </svg>
+            <i class="fas fa-plus me-2 text-light" width="16" height="16"></i>
             Nuovo Prodotto
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis align-items-center d-flex">
-            <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 448 512">
-              <path
-                d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z" />
-            </svg>
+          <a href="#" class="nav-link text-white">
+            <i class="fas fa-user-tie me-2 text-light" width="16" height="16"></i>
             Clienti
           </a>
         </li>
@@ -123,18 +104,17 @@
           <strong>Alessandro Palumbo</strong>
         </a>
         <ul class="dropdown-menu text-small shadow">
-          <li><a class="nav-link active" aria-current="page" href="#"><svg width="20" height="20" class="ms-2 me-2 mb-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"/></svg>Impostazioni</a></li>
-          <li><a class="nav-link" href="#"><img src="https://avatars.githubusercontent.com/u/163033493?v=4" alt="" width="20" height="20" class="rounded-circle ms-2 me-2">Profilo </a>
+          <li><a class="nav-link active" aria-current="page" href="#"><i class="fas fa-gear ms-2 me-2 text-light"></i>Impostazioni</a></li>
+          <li><a class="nav-link mt-1" href="#"><img src="https://avatars.githubusercontent.com/u/163033493?v=4" alt="" width="23" height="23" class="rounded-circle ms-1 me-1">Profilo </a>
           </li>
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="nav-link" href="#"><svg width="20" height="20" class="ms-2 me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/></svg>Esci</a>
+          <li><a class="nav-link" href="#"><i class="fas fa-arrow-right-from-bracket ms-2 me-2 text-light"></i>Esci</a>
           </li>
         </ul>
       </div>
     </div>
-
 
     <div class="container-fluid overflow-y-auto vh-100 bg-black">
         <div class="row">
@@ -143,11 +123,7 @@
             </div>
         </div>
     </div>
-    
-
   </main>
- 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </html>
