[FIX} Aggiunto container di sfondo in sponsor

--- a/sponsor.html
+++ b/sponsor.html
@@ -56,7 +56,7 @@
   </header>
 
   <!-- MAIN -->
-  <main class="d-flex overflow-y-hidden">
+  <main class="d-flex overflow-y-hidden vh-100">
 
     <!-- SIDEBAR -->
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark">
@@ -115,87 +115,92 @@
     </div>
 
     <!-- CONTENUTO DI DESTRA -->
-    <div class="container-fluid overflow-y-auto vh-100">
+    <div class="container-fluid overflow-y-auto px-5 ">
 
-      <!-- PRIMA SEZIONE -->
-      <div class="container p-5">
-        <div class="row d-flex justify-content-center mb-4">
-          <div class="col-12 d-flex flex-column justify-content-center">
-            <h2 class="fw-semibold text-center mb-3">
-              Trova il piano pefetto per te!
-            </h2>
-            <p class="text-center lead">
-              Sceglie tra le nostre opzioni di abbonamento e goditi funzionalità <br> esclusive e performance migliori.
-            </p>
-            <p class="text-center fw-semibold">
-              Porta la tua esperienza al livello successivo!
-            </p>
-            <div class="mx-auto">
-              <button type="button" class="btn btn-primary btn-lg rounded-5">Scopri di più</button>
-              <button type="button" class="btn btn-lg btn-outline-secondary rounded-5">Contattaci</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- SECONDA SEZIONE -->
-      <div class="container">
-        <div class="row row-cols-1 row-cols-lg-3 mb-3 text-center">
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Gratis</h4>
-              </div>
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title">€ 0<small class="text-body-secondary fw-light">/mese</small></h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>10 utenti</li>
-                  <li>2 GB di spazio</li>
-                  <li>Pubblicità</li>
-                  <li>Supporto email</li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary">Prosegui</button>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm border-primary">
-              <div class="card-header py-3 text-bg-primary border-primary">
-                <h4 class="my-0 fw-normal">Premium</h4>
-              </div>
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title">€ 15<small class="text-body-secondary fw-light">/mese</small>
-                </h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>50 utenti</li>
-                  <li>10 GB di spazio</li>
-                  <li>Senza pubblicità</li>
-                  <li>Supporto email prioritario</li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Enterprise</h4>
-              </div>
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title">€ 29<small class="text-body-secondary fw-light">/mese</small>
-                </h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>Utenti illimitati</li>
-                  <li>Spazio illimitato</li>
-                  <li>Senza pubblicità</li>
-                  <li>Supporto via email e chat</li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
+      <div class="container px-5 pb-2 mt-5 mb-5 bg-light rounded-3 ">
+        <!-- PRIMA SEZIONE -->
+        <div class="container p-5">
+          <div class="row d-flex justify-content-center mb-4">
+            <div class="col-12 d-flex flex-column justify-content-center">
+              <h2 class="fw-semibold text-center mb-3">
+                Trova il piano pefetto per te!
+              </h2>
+              <p class="text-center lead">
+                Sceglie tra le nostre opzioni di abbonamento e goditi funzionalità <br> esclusive e performance migliori.
+              </p>
+              <p class="text-center fw-semibold">
+                Porta la tua esperienza al livello successivo!
+              </p>
+              <div class="mx-auto">
+                <button type="button" class="btn btn-primary btn-lg rounded-5">Scopri di più</button>
+                <button type="button" class="btn btn-lg btn-outline-secondary rounded-5">Contattaci</button>
               </div>
             </div>
           </div>
         </div>
+  
+        <!-- SECONDA SEZIONE -->
+        <div class="container">
+          <div class="row row-cols-1 row-cols-lg-3 mb-3 text-center">
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my-0 fw-normal">Gratis</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">€ 0<small class="text-body-secondary fw-light">/mese</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>10 utenti</li>
+                    <li>2 GB di spazio</li>
+                    <li>Pubblicità</li>
+                    <li>Supporto email</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-primary">Prosegui</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                <div class="card-header py-3 text-bg-primary border-primary">
+                  <h4 class="my-0 fw-normal">Premium</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">€ 15<small class="text-body-secondary fw-light">/mese</small>
+                  </h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>50 utenti</li>
+                    <li>10 GB di spazio</li>
+                    <li>Senza pubblicità</li>
+                    <li>Supporto email prioritario</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my-0 fw-normal">Enterprise</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">€ 29<small class="text-body-secondary fw-light">/mese</small>
+                  </h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>Utenti illimitati</li>
+                    <li>Spazio illimitato</li>
+                    <li>Senza pubblicità</li>
+                    <li>Supporto via email e chat</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
+
     </div>
   </main>
 </body>
